--- a/style/base.css
+++ b/style/base.css
@@ -22,8 +22,10 @@ th {
 
 /* boxes */
 .content-box {
-  margin-top:1%;
-  margin-bottom:1%;
+  margin-bottom:10px;
+  border:1px solid silver;
+  border-radius: 4px;
+  padding:10px;
 }
 
 .content-box .content {
@@ -63,7 +65,7 @@ th {
   background-color: #343a40; 
   color: white;
   border-radius: 5px;
-  border:4px solid cadetblue;
+  border:1px solid white;
   padding: 10px;
   text-align: center;
   text-decoration: none;
@@ -94,12 +96,29 @@ th {
   clear: both;
 }
 
-.stats {
+/* .stats {
   float: left;
   font-size: 150%;
   width: 80%;
   height: 27px;
-  padding: 18px;
+  padding-left: 18px;
+} */
+
+.stats {
+  background-color: #343a40; 
+  color: white;
+  border-radius: 5px;
+  border:1px solid white;
+  padding-top: 15px;
+  margin-top:2px;
+  margin-left:1em;
+  margin-right:1em;
+  padding-left:1em;
+  padding-right:1em;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 18px;
 }
 
 
